Przeprowadzono test diod na czterech wolnych pinach: PD2-7, PB0. Sluzy do okreslenia czy atmega dziala, czy problemy sa software'owe czy hardare'owe.

--- a/kalorymetr/kalorymetr/Debug/Makefile
+++ b/kalorymetr/kalorymetr/Debug/Makefile
@@ -37,8 +37,7 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../kalorymetr.cpp \
-../modules/all.cpp
+../kalorymetr.cpp
 
 
 PREPROCESSING_SRCS += 
@@ -48,20 +47,16 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-kalorymetr.o \
-modules/all.o
+kalorymetr.o
 
 OBJS_AS_ARGS +=  \
-kalorymetr.o \
-modules/all.o
+kalorymetr.o
 
 C_DEPS +=  \
-kalorymetr.d \
-modules/all.d
+kalorymetr.d
 
 C_DEPS_AS_ARGS +=  \
-kalorymetr.d \
-modules/all.d
+kalorymetr.d
 
 OUTPUT_FILE_PATH +=kalorymetr.elf
 
@@ -77,16 +72,7 @@ LIB_DEP+=
 
 
 
-
-
 ./%.o: .././%.cpp
-	@echo Building file: $<
-	@echo Invoking: AVR8/GNU C Compiler : 4.8.1
-	$(QUOTE)E:\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -c -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
-	@echo Finished building: $<
-	
-
-modules/%.o: ../modules/%.cpp
 	@echo Building file: $<
 	@echo Invoking: AVR8/GNU C Compiler : 4.8.1
 	$(QUOTE)E:\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -c -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
